# MyRSS

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
myrssapp/: __init__.py  main.py
myrssapp/database/: connection.py  repository.py  schema.py
myrssapp/models/: article.py  category.py  enums.py  feed.py  settings_item.py  tag.py
myrssapp/services/: article_service.py  feed_service.py  fetch_service.py  opml_service.py  search_service.py  settings_service.py  translation_service.py
myrssapp/utils/: config.py  font_manager.py  resource_path.py  theme_manager.py
myrssapp/viewmodels/: add_feed_viewmodel.py  article_detail_viewmodel.py  article_list_viewmodel.py  base_viewmodel.py  feed_list_viewmodel.py  full_translation_viewmodel.py  main_viewmodel.py  settings_viewmodel.py  translation_viewmodel.py
myrssapp/views/: add_feed_dialog.py  article_detail_view.py  article_list_view.py  feed_list_view.py  full_translation_dialog.py  main_window.py  settings_dialog.py  translation_panel.py
myrssapp/views/widgets/: article_list_item.py  feed_tree_item.py  loading_indicator.py  search_bar.py  status_bar.py
resources/styles/: base.qss  dark.qss  light.qss
tests/: __init__.py
