[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "myrssapp"
version = "1.0.0"
description = "Windows Desktop RSS Reader"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "MyRssApp"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]

dependencies = [
    "PySide6>=6.8.0,<7.0.0",
    "PySide6_Addons>=6.8.0,<7.0.0",
    "feedparser>=6.0.11,<7.0.0",
    "requests>=2.31.0,<3.0.0",
    "lxml>=5.1.0,<6.0.0",
    "python-dateutil>=2.8.2,<3.0.0",
    "openai>=1.30.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0.0",
    "pytest-qt>=4.4.0",
]
build = [
    "PyInstaller>=6.0.0",
]

[project.scripts]
myrssapp = "myrssapp.main:main"

[tool.setuptools.packages.find]
include = ["myrssapp*"]
